--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ h2#Punkte {
   margin-bottom: 10px;
 }
 
+h3#Fehler {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 3em;
+  color: red;
+  margin:0;
+}
+
 div#AnzeigeText {
   font-size: 4em;
 }
@@ -23,5 +32,59 @@ div#AnzeigeText {
   top: 10px;
   right: 10px;
   cursor: pointer;
-  z-index: 1000; /* Stellen Sie sicher, dass es über anderen Inhalten liegt */
+  z-index: 1000;
+}
+
+.varianten-icon {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+/* Modal-Styling */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1001;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 5px solid rgba(0, 0, 0, 0.3);
+  max-width: 600px; /* Maximale Breite des Modals */
+  text-align: center;
+  border-radius: 10px;
+}
+
+.modal-content img {
+  max-width: 600px;
+}
+
+.modal-content button {
+  cursor: pointer;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
